--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -211,3 +211,209 @@ body {
 .box-item:first-child {
   border-left: none;
 }
+
+ul{
+  list-style: none;
+}
+.footer{
+  background-color: #057eb3;
+}
+.footer .top-list{
+  font-size: 12px;
+}
+.footer ul li a{
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.animatable {
+  visibility: hidden;
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+  -ms-animation-play-state: paused;
+  -o-animation-play-state: paused;
+  animation-play-state: paused;
+}
+.animated {
+  visibility: visible;
+
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -ms-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+
+  -webkit-animation-play-state: running;
+  -moz-animation-play-state: running;
+  -ms-animation-play-state: running;
+  -o-animation-play-state: running;
+  animation-play-state: running;
+}
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-80px);
+  }	100% {
+         opacity: 1;
+         -webkit-transform: translateY(0);
+       }
+}
+
+@-moz-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -moz-transform: translateY(-80px);
+  }
+
+  100% {
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+
+@-o-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -o-transform: translateY(-80px);
+  }
+
+  100% {
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.animated.animationDelay{
+  animation-delay:.4s;
+  -webkit-animation-delay:.4s;
+}
+.animated.animationDelayMed{
+  animation-delay:1.2s;
+  -webkit-animation-delay:1.2s;
+}
+.animated.animationDelayLong{
+  animation-delay:1.6s;
+  -webkit-animation-delay:1.6s;
+}
+.animated.fadeBgColor {
+  -webkit-animation-name: fadeBgColor;
+  -moz-animation-name: fadeBgColor;
+  -o-animation-name: fadeBgColor;
+  animation-name: fadeBgColor;
+}
+.animated.fadeInDown {
+  -webkit-animation-name: fadeInDown;
+  -moz-animation-name: fadeInDown;
+  -o-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+}
+.header {
+  transition: all 1s ease-in-out;
+}
+.header.active {
+  background-color: #045b82;
+  opacity: 0.9;
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+}
+h1, h4, h5{
+  text-transform: uppercase;
+}
+h1{
+  color: #FFF;
+}
+h1 label{
+  font-size: 60px;
+  font-weight: bold;
+}
+.divImgText h4{
+  margin-bottom: 0px;
+}
+.row .container h4{
+  font-weight: 700;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+.container-fluid-border{
+  border-bottom: 1px groove #cdcdcd;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+}
+.row .container .col-lg-4{
+  padding: 0px 20px 0px 0px;
+}
+.row .container .containerImg .col-lg-4 img{
+  width: 100%;
+  height: 180px;
+}
+.divImgText .help-block{
+  font-size: 11px;
+  font-weight: 300;
+  margin-top: 0px;
+  margin-bottom: 8px;
+  color: #a4aaae;
+}
+.divImgText label{
+  color: #E86D4C;
+}
+.container-fluid .row .container .row .col-lg-2{
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.container-fluid .row .container .row .col-lg-2 div{
+  font-size: 55px;
+  color: #FFF;
+  font-weight: bold;
+  font-weight: 100;
+}
+.container-fluid .row .container .row .col-lg-2 div label{
+  font-size: 12px;
+  vertical-align: middle;
+}
+.container-fluid .row .container .row .col-lg-2 h5{
+  color: #FFF;
+  font-weight: bold;
+}
+.container-fluid .row .container .row .col-lg-2 img{
+  margin-top: 15px;
+  margin-bottom: 9px;
+}
+.marginB15{
+  margin-bottom: 15px;
+}
+.marginB30{
+  margin-bottom: 30px;
+}
+.paddingR6 {
+  padding: 0px 6px 0px 0px !important;
+}
+@media (min-width : 768px) {
+  .box-item {
+    border: none;
+  }
+}
+@media (min-width: 992px){
+  .box-item {
+    border-bottom: 1px solid #CCC;
+    border-left: 1px solid #CCC;
+  }
+}
