--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -191,6 +191,113 @@ body {
   }
 }
 
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 2500px) {
+  .wrapper-image-small h1 {
+    margin-top: 25%;
+    margin-left: 0%;
+    margin-bottom: 20%;
+  }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+  .wrapper-image-small h1 {
+    margin-top: 15%;
+    margin-left: 0%;
+    margin-bottom: 3%;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+  .wrapper-image-small h1 {
+    margin-top: 10%;
+    margin-left: 0%;
+    margin-bottom: 5%;
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  .wrapper-image-small h1 {
+    margin-top: 10%;
+    margin-left: 0%;
+    margin-bottom: 15%;
+  }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .wrapper-image-small h1 {
+    margin-top: 10%;
+    margin-left: 0%;
+    margin-bottom: 5%;
+  }
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+  .wrapper-image-small h1 {
+    margin-top: 10%;
+    margin-left: 0%;
+    margin-bottom: 5%;
+  }
+}
+
+.wrapper-image-small h1 {
+  color: #FFF;
+}
+
+html{
+  overflow-x: hidden;
+}
+
+.count
+{
+  font-size: 55px;
+  color: #FFF;
+  font-weight: bold;
+  font-weight: 100;
+}
+
+.shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  top:0;
+  left:0;
+  background: rgba(0, 0, 0, 0.15);
+}
+
+.section-bg {
+  position: relative;
+  width: 100vw;
+}
+
+.bg-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
+}
+
+.bg {
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  transform: translateZ(0);
+  will-change: transform;
+}
+
 .title h4{
   font-weight: 100 !important;
   text-transform: uppercase;
@@ -434,4 +541,12 @@ h1 label{
     border-bottom: 1px solid #CCC;
     border-left: 1px solid #CCC;
   }
+}
+.image-collection {
+  padding: 0px 10px 0px 0px !important;
+}
+
+.image-collection img {
+  height: 150px;
+  width: 100%;
 }
