--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,4 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/font-awesome-sass/assets/stylesheets/font-awesome";
+@import "node_modules/simplelightbox/dist/simplelightbox.min";
