--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,3 +9,4 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/font-awesome-sass/assets/stylesheets/font-awesome";
 @import "node_modules/simplelightbox/dist/simplelightbox.min";
+@import "node_modules/bootstrap-slider/dist/css/bootstrap-slider.min";
